<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragment.FragmentCuenta"
    android:padding="10dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/Txt_perfil"
            android:text="@string/Txt_perfil"
            android:fontFamily="@font/jersey"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="30dp"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>
        <ImageView
            android:id="@+id/Iv_perfil"
            android:layout_below="@+id/Txt_perfil"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/img_perfil"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp"
            android:scaleType="centerCrop">
            
        </ImageView>
        <TextView
            android:id="@+id/Txt_informacion"
            android:text="@string/Txt_informacion"
            android:layout_below="@+id/Iv_perfil"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>
        <TextView
            android:layout_below="@+id/Txt_informacion"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TextView>
        <TextView
            android:layout_below="@+id/Txt_informacion"
            android:layout_marginTop="15dp"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_below="@+id/Txt_informacion"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TextView>
        <TextView
            android:layout_below="@+id/Txt_informacion"
            android:layout_marginTop="15dp"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/Txt_nombres"
            android:text="@string/Txt_nombres"
            android:layout_below="@+id/Txt_informacion"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TextView>
        <TextView
            android:id="@+id/Tv_nombres"
            android:text="@string/Tv_nombres"
            android:layout_below="@+id/Txt_informacion"
            android:layout_marginTop="15dp"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/Txt_email"
            android:text="@string/Txt_email"
            android:layout_below="@+id/Txt_nombres"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TextView>
        <TextView
            android:id="@+id/Tv_email"
            android:text="@string/Tv_email"
            android:layout_below="@+id/Txt_nombres"
            android:layout_marginTop="15dp"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/Txt_nacimiento"
            android:text="@string/Txt_nacimiento"
            android:layout_below="@+id/Txt_email"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TextView>
        <TextView
            android:id="@+id/Tv_nacimiento"
            android:text="@string/Tv_nacimiento"
            android:layout_below="@+id/Txt_email"
            android:layout_marginTop="15dp"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/Txt_miembro"
            android:text="@string/Txt_miembro"
            android:layout_below="@+id/Txt_nacimiento"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TextView>
        <TextView
            android:id="@+id/Tv_miembro"
            android:text="@string/Tv_miembro"
            android:layout_below="@+id/Txt_nacimiento"
            android:layout_marginTop="15dp"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/Txt_telefono"
            android:text="@string/Txt_telefono"
            android:layout_below="@+id/Txt_miembro"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TextView>
        <TextView
            android:id="@+id/Tv_telefono"
            android:text="@string/Tv_telefono"
            android:layout_below="@+id/Txt_miembro"
            android:layout_marginTop="15dp"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/Txt_estado_cuenta"
            android:text="@string/Txt_estado_cuenta"
            android:layout_below="@+id/Txt_telefono"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TextView>
        <TextView
            android:id="@+id/Tv_estado_cuenta"
            android:text="@string/Tv_estado_cuenta"
            android:layout_below="@+id/Txt_telefono"
            android:layout_marginTop="15dp"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/TxtOpciones"
            android:text="@string/Txt_Opciones"
            android:layout_below="@+id/Txt_estado_cuenta"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:textSize="17sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TextView>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/Boton_editar_perfil"
            android:text="@string/Boton_editar_perfil"
            android:layout_below="@+id/TxtOpciones"
            android:textAllCaps="true"
            app:icon="@drawable/ic__editar"
            android:layout_centerInParent="true"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/black"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/Boton_cambiar_pass"
            android:text="@string/Boton_cambiar_pass"
            android:layout_below="@+id/Boton_editar_perfil"
            android:textAllCaps="true"
            app:icon="@drawable/ic_password"
            android:layout_centerInParent="true"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/black"/>/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/Boton_verificar_cuenta"
            android:text="@string/Boton_verificar_cuenta"
            android:layout_below="@+id/Boton_cambiar_pass"
            android:textAllCaps="true"
            app:icon="@drawable/ic_verificar"
            android:layout_centerInParent="true"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/verde_oscuro"/>/>



        <com.google.android.material.button.MaterialButton
            android:id="@+id/Boton_cerrar_sesion"
            android:text="@string/Boton_cerrar_sesion"
            android:layout_below="@+id/Boton_verificar_cuenta"
            android:textAllCaps="true"
            app:icon="@drawable/ic_salir"
            android:layout_centerInParent="true"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:backgroundTint="#FF0000"/>
    </RelativeLayout>

</ScrollView>