<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.Registro_usuario">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="30dp"
        android:gravity="center">
        <TextView
            android:text="@string/Texto_registro"
            android:fontFamily="@font/jersey"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </TextView>
        
        <ImageView
            android:layout_marginTop="15dp"
            android:src="@drawable/registro"
            android:layout_width="80dp"
            android:layout_height="80dp">

        </ImageView>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusTopStart="8dp">
            <EditText
                android:id="@+id/Et_email"
                android:hint="@string/Et_email"
                android:layout_width="match_parent"
                android:inputType="textEmailAddress"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:passwordToggleEnabled="true">
            <EditText
                android:id="@+id/Et_password"
                android:hint="@string/Et_password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:passwordToggleEnabled="true">
            <EditText
                android:id="@+id/Texto_repetir_password"
                android:hint="@string/Texto_repetir_password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/Boton_ingresar"
            android:text="@string/Boton_registrar"
            android:textAllCaps="true"
            android:layout_marginTop="15dp"
            android:layout_width="180dp"
            android:layout_height="@dimen/m_altura_boton">

        </com.google.android.material.button.MaterialButton>
    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>