<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.OpcionesRegistro">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="100"
            android:layout_margin="8dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="900dp"
                android:background="@drawable/background_registro_gradient"
                android:orientation="vertical"
                android:padding="8dp">

                <com.airbnb.lottie.LottieAnimationView
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="100dp"
                    android:hardwareAccelerated="true"
                    app:lottie_autoPlay="true"
                    app:lottie_enableMergePathsForKitKatAndAbove="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/prueba15" />



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="150dp"
                    android:fontFamily="@font/jersey"
                    android:textColor="@color/black"
                    android:text="@string/bienvenido_a"
                    android:textAllCaps="true"
                    android:textSize="48sp"
                    android:maxLines="1"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="5dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/ganagoza"
                    android:textAllCaps="true"
                    android:textSize="58sp"
                    android:fontFamily="@font/paradero21"
                    android:layout_marginStart="40dp"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/Ingresar_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="@color/white"
                    android:elevation="8dp"
                    android:fontFamily="@font/jersey"
                    android:textColor="@android:color/black"
                    android:text="@string/Ingresa_email"
                    android:textAllCaps="true"
                    android:textSize="30sp"
                    app:icon="@drawable/google"
                    app:iconGravity="textStart"
                    app:iconPadding="10dp"
                    app:iconTint="@null" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/Ingresar_cuenta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:backgroundTint="@color/white"
                    android:elevation="20dp"
                    android:fontFamily="@font/jersey"
                    android:text="@string/Ingresar_cuenta"
                    android:textAllCaps="true"
                    android:textColor="@color/rojo"
                    android:textSize="30sp"
                    app:icon="@drawable/acceso"
                    app:iconGravity="textStart"
                    app:iconPadding="10dp"
                    app:iconTint="@null" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</RelativeLayout>


