<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.RecuperarPassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="100"
            android:layout_margin="8dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_inicio_session"
                android:orientation="vertical"
                android:padding="8dp">

                <RelativeLayout
                    android:id="@+id/ToolbarRL"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/m_altura_boton">

                    <ImageButton
                        android:id="@+id/Ib_regresar"
                        android:src="@drawable/ic_regresar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:text="@string/Txt_olvide_contraseña_2"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:layout_centerInParent="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#cccccc"
                        android:layout_alignParentBottom="true"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_below="@+id/ToolbarRL"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/Iv_password"
                        android:layout_width="250dp"
                        android:layout_height="250dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="50dp"
                        android:hardwareAccelerated="true"
                        app:lottie_autoPlay="true"
                        app:lottie_enableMergePathsForKitKatAndAbove="true"
                        app:lottie_loop="true"
                        app:lottie_rawRes="@raw/contrasena"/>

                    <TextView
                        android:id="@+id/Txt_instrucciones"
                        android:layout_below="@id/Iv_password"
                        android:layout_marginTop="2dp"
                        android:textAlignment="center"
                        android:text="@string/Txt_instrucciones"
                        android:textSize="25dp"
                        android:fontFamily="@font/jersey"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/TIL_email"
                        android:layout_below="@+id/Txt_instrucciones"
                        android:layout_marginTop="10dp"
                        app:boxCornerRadiusBottomStart="8dp"
                        app:boxCornerRadiusTopEnd="8dp"
                        app:boxCornerRadiusBottomEnd="8dp"
                        app:boxCornerRadiusTopStart="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:boxStrokeColor="@color/azul_cielo"
                        app:boxStrokeWidth="5dp">

                        <EditText
                            android:id="@+id/Et_email"
                            android:hint="@string/Et_email"
                            android:inputType="textEmailAddress"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/Boton_enviar_instrucciones"
                        android:text="@string/Boton_enviar_instrucciones"
                        android:textAllCaps="true"
                        android:layout_marginTop="5dp"
                        android:layout_below="@id/TIL_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/jersey"
                        android:textColor="@color/rojo"
                        android:backgroundTint="@color/white"
                        android:textSize="25dp"/>
                </RelativeLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</RelativeLayout>
